--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--=============== FAVICON ===============-->
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
+    <!--=============== SWIPER CSS ===============-->
+    <link rel="stylesheet" href="">
+
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header" id="header">
+        <nav class="nav">
+            <a href="#" class="nav-logo"></a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><a href="#" class="nav__link"></a></li>
+                    <li><a href="#" class="nav__link"></a></li>
+                    <li><a href="#" class="nav__link"></a></li>
+                    <li><a href="#" class="nav__link"></a></li>
+                    <li><a href="#" class="nav__link"></a></li>
+                    <li><a href="#" class="nav__link"></a></li>
+                </ul>
+                <div class="nav__close" id="nav-close">
+
+                </div>
+            </div>
+            <div class="nav__toggle" id="nav-toggle">
+
+            </div>
+        </nav>
+    </header>
+    <main>
+        <!-- ABOUT section -->
+        <section class="about" id="about">
+
+        </section>
+        <!-- CATEGORY section -->
+         <section class="category" id="category">
+
+         </section>
+    </main>
 </body>
 </html>
