--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav">
             <a href="#" class="nav-logo"></a>
@@ -35,15 +36,46 @@
             </div>
         </nav>
     </header>
+    <!--==================== MAIN ====================-->
     <main>
-        <!-- ABOUT section -->
+        <!--==================== ABOUT ====================-->
         <section class="about" id="about">
 
         </section>
-        <!-- CATEGORY section -->
-         <section class="category" id="category">
+       <!--==================== CATEGORY ====================-->
+        <section class="category" id="category">
 
-         </section>
+        </section>
+        <!--==================== DESTINATIONS ====================-->
+        <section class="destinations" id="destinations">
+
+        </section>
+        <!--==================== ORDER ====================-->
+        <section class="order" id="order">
+
+        </section>
+        <!--==================== TESTIMONIALS ====================-->
+        <section class="testimonials" id="testimonials">
+
+        </section>
+        <!--==================== CONTACT ====================-->
+        <section class="contact" id="contact">
+
+        </section>
     </main>
+    <footer class="footer" id="footer">
+
+    </footer>
+    <!--========== SCROLL UP ==========-->
+
+
+    <!--=============== SCROLLREVEAL ===============-->
+    <script src=""></script>
+
+    <!--=============== SWIPER JS ===============-->
+    <script src=""></script>
+
+    <!--=============== MAIN JS ===============-->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
